--- a/webservice-frontend/app/views/about.html
+++ b/webservice-frontend/app/views/about.html
@@ -23,93 +23,93 @@
 	<ul class="users-list clearfix">
 		<ul class="users-list clearfix">
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Salah Beck</h3>
 				<p>Tracking Service</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Vincent Nelius</h3>
 				<p>Tracking Service</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Prasad Bhambure</h3>
 				<p>Tracking Service</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Florian Wenzel</h3>
 				<p>Tracking Service</p>
 			</li>
 		</ul>
 		<ul class="users-list clearfix">
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Jan Kowollik</h3>
 				<p>Data-Link Layer</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Jannik Stach</h3>
 				<p>Data-Link Layer</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Maik Wosnitzka</h3>
 				<p>Data-Link Layer</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Oskar Carl</h3>
 				<p>Data-Link Layer</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Noornabi Mohmand</h3>
 				<p>Data-Link Layer</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Firas Sabbah</h3>
 				<p>Data-Link Layer</p>
 			</li>
 		</ul>
 		<ul class="users-list clearfix">
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Khaled Hossain</h3>
 				<p>Big-Data Framework</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Md Masum Billah</h3>
 				<p>Big-Data Framework</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Md Ariful Islam</h3>
 				<p>Big-Data Framework</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Qadir Abdul Hussain</h3>
 				<p>Big-Data Framework</p>
 			</li>
 		</ul>
 		<ul class="users-list clearfix">
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Janine Neffgen</h3>
 				<p>Database</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Romina Barth</h3>
 				<p>Database</p>
 			</li>
 			<li>
-				<img alt="User Image" src="http://placehold.it/200x200"></img>
+				<img alt="User Image" src="http://placehold.it/200x200"/>
 				<h3>Marc Henning</h3>
 				<p>Database</p>
 			</li>
