--- a/webservice-frontend/app/views/request.html
+++ b/webservice-frontend/app/views/request.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-3">
-		<h2 class="page-header">Endpoints<h2>
+        <h2 class="page-header">Endpoints</h2>
 		<div class="info-box">
 			<a href="#/request/users"><span class="info-box-icon" ng-class="{'bg-light-blue': ('request.users' | routeSegmentStartsWith)}"><i class="fa fa-user"></i></span></a>
 			<div class="info-box-content">
