--- a/webservice-frontend/app/views/request/locations.html
+++ b/webservice-frontend/app/views/request/locations.html
@@ -31,7 +31,7 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Location ID</label>
-						<input class="form-control" placeholder="location id"></input>
+						<input class="form-control" placeholder="location id"/>
 					</div>
 				</div>
 			</div>
@@ -77,15 +77,15 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Location ID</label>
-						<input class="form-control" placeholder="location id"></input>
+						<input class="form-control" placeholder="location id"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Min ID</label>
-						<input class="form-control" placeholder="return media before this min id"></input>
+						<input class="form-control" placeholder="return media before this min id"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Max ID</label>
-						<input class="form-control" placeholder="return media after this max id"></input>
+						<input class="form-control" placeholder="return media after this max id"/>
 					</div>
 				</div>
 			</div>
@@ -131,40 +131,40 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Optional Distance</label>
-						<input class="form-control" placeholder="default 1km(1000) max 5km"></input>
+						<input class="form-control" placeholder="default 1km(1000) max 5km"/>
 					</div>
 					<div class="form-group">
 						<label>Facebook Places ID</label>
-						<input class="form-control" placeholder="returns location mapped off facebook places id"></input>
+						<input class="form-control" placeholder="returns location mapped off facebook places id"/>
 					</div>
 					<div class="form-group">
 						<label>Foursquare v2 ID</label>
-						<input class="form-control" placeholder="returns location mapped off foursquare v2 api location id"></input>
+						<input class="form-control" placeholder="returns location mapped off foursquare v2 api location id"/>
 					</div>
 					<div class="form-group">
 						<label>Latitude</label>
-						<input class="form-control" placeholder="latitude"></input>
+						<input class="form-control" placeholder="latitude"/>
 					</div>
 					<div class="form-group">
 						<label>Longitude</label>
-						<input class="form-control" placeholder="longitude"></input>
+						<input class="form-control" placeholder="longitude"/>
 					</div>
 					<div class="form-group">
 						<div class="radio">
 							<label>
-								<input type="radio" checked="" value="location_facebook" name="mediaRadios"></input>
+								<input type="radio" checked="" value="location_facebook" name="mediaRadios"/>
 								By Facebook Places ID
 							</label>
 						</div>
 						<div class="radio">
 							<label>
-								<input type="radio" value="location_foursquare" name="mediaRadios"></input>
+								<input type="radio" value="location_foursquare" name="mediaRadios"/>
 								By Foursquare ID
 							</label>
 						</div>
 						<div class="radio">
 							<label>
-								<input type="radio" value="location_latlng" name="mediaRadios"></input>
+								<input type="radio" value="location_latlng" name="mediaRadios"/>
 								By Lat/Lng
 							</label>
 						</div>
