--- a/webservice-frontend/app/views/request/media.html
+++ b/webservice-frontend/app/views/request/media.html
@@ -29,18 +29,18 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Media ID / Shortcode</label>
-						<input class="form-control" placeholder="media id or shortcode"></input>
+						<input class="form-control" placeholder="media id or shortcode"/>
 					</div>
 					<div class="form-group">
 						<div class="radio">
 							<label>
-								<input type="radio" checked="" value="media_id" name="mediaRadios"></input>
+								<input type="radio" checked="" value="media_id" name="mediaRadios"/>
 								By ID
 							</label>
 						</div>
 						<div class="radio">
 							<label>
-								<input type="radio" value="media_shortcode" name="mediaRadios"></input>
+								<input type="radio" value="media_shortcode" name="mediaRadios"/>
 								By Shortcode
 							</label>
 						</div>
@@ -89,15 +89,15 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Latitude</label>
-						<input class="form-control" placeholder="latitude"></input>
+						<input class="form-control" placeholder="latitude"/>
 					</div>
 					<div class="form-group">
 						<label>Longitude</label>
-						<input class="form-control" placeholder="longitude"></input>
+						<input class="form-control" placeholder="longitude"/>
 					</div>
 					<div class="form-group">
 						<label>Distance</label>
-						<input class="form-control" placeholder="default 1km (1000) max 5km"></input>
+						<input class="form-control" placeholder="default 1km (1000) max 5km"/>
 					</div>
 				</div>
 			</div>
