--- a/webservice-frontend/app/views/request/relationships.html
+++ b/webservice-frontend/app/views/request/relationships.html
@@ -160,7 +160,7 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>User ID</label>
-						<input class="form-control" placeholder="the other user"></input>
+						<input class="form-control" placeholder="the other user"/>
 					</div>
 				</div>
 			</div>
