--- a/webservice-frontend/app/views/request/tags.html
+++ b/webservice-frontend/app/views/request/tags.html
@@ -31,7 +31,7 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Tag Name</label>
-						<input class="form-control" placeholder="tag name"></input>
+						<input class="form-control" placeholder="tag name"/>
 					</div>
 				</div>
 			</div>
@@ -77,19 +77,19 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Tag Name</label>
-						<input class="form-control" placeholder="tag name"></input>
+						<input class="form-control" placeholder="tag name"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Count</label>
-						<input class="form-control" placeholder="count of media to return"></input>
+						<input class="form-control" placeholder="count of media to return"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Min Tag ID</label>
-						<input class="form-control" placeholder="return media before min tag id"></input>
+						<input class="form-control" placeholder="return media before min tag id"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Max Tag ID</label>
-						<input class="form-control" placeholder="return media after max tag id"></input>
+						<input class="form-control" placeholder="return media after max tag id"/>
 					</div>
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Query</label>
-						<input class="form-control" placeholder="Search ..."></input>
+						<input class="form-control" placeholder="Search ..."/>
 					</div>
 				</div>
 			</div>
