--- a/webservice-frontend/app/views/token.html
+++ b/webservice-frontend/app/views/token.html
@@ -22,37 +22,37 @@
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputClientId">Client Id</label>
 						<div class="col-sm-10">
-							<input id="inputClientId" class="form-control" value=" 68b960897e8540c7ba0d4218fd0f64bf"></input>
+							<input id="inputClientId" class="form-control" value=" 68b960897e8540c7ba0d4218fd0f64bf"/>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputClientSecret">Client Secret</label>
 						<div class="col-sm-10">
-							<input id="inputClientSecret" class="form-control" value=" 8465494e5e7e4d719dbe00459f7fd985"></input>
+							<input id="inputClientSecret" class="form-control" value=" 8465494e5e7e4d719dbe00459f7fd985"/>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputCallback">Callback URI</label>
 						<div class="col-sm-10">
-							<input id="inputCallback" class="form-control" value=" http://localhost"></input>
+							<input id="inputCallback" class="form-control" value=" http://localhost"/>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputScope">Scope</label>
 						<div class="col-sm-10">
-							<input id="inputScope" class="form-control" value=" basic"></input>
+							<input id="inputScope" class="form-control" value=" basic"/>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputConnectTimeout">Connection Timeout in ms</label>
 						<div class="col-sm-10">
-							<input id="inputConnectTimeout" class="form-control" value=" 1000"></input>
+							<input id="inputConnectTimeout" class="form-control" value=" 1000"/>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-sm-2 control-label" for="inputReadTimeout">Read Timeout in ms</label>
 						<div class="col-sm-10">
-							<input id="inputReadTimeout" class="form-control" value=" 1000"></input>
+							<input id="inputReadTimeout" class="form-control" value=" 1000"/>
 						</div>
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<div class="info-box bg-light-blue">
-            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right" ></img></span>
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" style="img-align:left;" alt="User Image" /></span>
             <div class="info-box-content">
               <span class="info-box-text">Bugs Bunny</span>
 				<span class="info-box-number">...84654654883235fa4bf
@@ -96,7 +96,7 @@
 	<div class="col-md-4">
 
 		<div class="info-box bg-light-blue">
-            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" style="img-align:left;" alt="User Image"/></span>
 
             <div class="info-box-content">
 				<span class="info-box-text">User 2</span>
@@ -117,7 +117,7 @@
 	<div class="col-md-4">
 
 		<div class="info-box bg-light-blue">
-            <span class="info-box-icon"><img src="http://placehold.it/200x200" align="right"></img></span>
+            <span class="info-box-icon"><img src="http://placehold.it/200x200" style="img-align:left;" alt="User Image"/></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Another User</span>
