--- a/webservice-frontend/app/views/database.html
+++ b/webservice-frontend/app/views/database.html
@@ -48,7 +48,7 @@
 	
 	<div class="col-sm-10">
 		<div class="row">
-			<div class col-sm-12">
+			<div class="col-sm-12">
 				<h2 class="page-header">Query Settings</h2>
 				<div class="nav-tabs-custom">
 					<ul class="nav nav-tabs">
@@ -93,7 +93,7 @@
 								</div>
 							</div>
 							<div class="row">
-									<label class="col-sm-12">Where<label>
+                                <label class="col-sm-12">Where</label>
 							</div>
 							<div class="row">
 								<div class="col-sm-1">
@@ -112,13 +112,13 @@
 								</div>
 								<div class="col-sm-1">
 									<select class="form-control select2" style="width: 100%;" tabindex="-1">
-											<option><</option>
+											<option>&lt;</option>
 											<option>></option>
 											<option>=</option>
 									</select>
 								</div>
 								<div class="col-sm-5">
-									<input class="form-control"></input>
+									<input class="form-control"/>
 								</div>	
 							</div>
 							<hr>
