--- a/webservice-frontend/app/views/login.html
+++ b/webservice-frontend/app/views/login.html
@@ -1,9 +1,8 @@
- <div class="login-box">
+    <div class="login-box">
       <div class="login-logo">
-      <b>Instagram</b>Stalker</a>
+        <p><b>Admin</b>LTE</p>
       </div><!-- /.login-logo -->
-	  
-	
+      <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>
         <form action="../../index2.html" method="post">
           <div class="form-group has-feedback">
@@ -29,16 +28,11 @@
         </form>
 
         <a href="#">I forgot my password</a><br>
-       <font color="blue"> For Registration contact the Admin</font>
+        <a href="register.html" class="text-center">Register a new membership</a>
 
       </div><!-- /.login-box-body -->
     </div><!-- /.login-box -->
 
-    <!-- jQuery 2.1.4 -->
-    <script src="../../plugins/jQuery/jQuery-2.1.4.min.js"></script>
-    <!-- Bootstrap 3.3.5 -->
-    <script src="../../bootstrap/js/bootstrap.min.js"></script>
-    <!-- iCheck -->
     <script src="../../plugins/iCheck/icheck.min.js"></script>
     <script>
       $(function () {
