--- a/webservice-frontend/app/views/request/comments.html
+++ b/webservice-frontend/app/views/request/comments.html
@@ -25,7 +25,7 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Media ID</label>
-						<input class="form-control" placeholder="media id"></input>
+						<input class="form-control" placeholder="media id"/>
 					</div>
 				</div>
 			</div>
