--- a/webservice-frontend/app/views/request/users.html
+++ b/webservice-frontend/app/views/request/users.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-sm-12 form-group">
 					<label>Optional User ID</label>
-					<input class="form-control" placeholder="Optional User ID"></input>
+					<input class="form-control" placeholder="Optional User ID"/>
 				</div>
 			</div>
 			<!-- Access Token -->
@@ -78,19 +78,19 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Optional User ID</label>
-						<input class="form-control" placeholder="user id"></input>
+						<input class="form-control" placeholder="user id"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Count</label>
-						<input class="form-control" placeholder="count of media to return"></input>
+						<input class="form-control" placeholder="count of media to return"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Min ID</label>
-						<input class="form-control" placeholder="return media later than min id"></input>
+						<input class="form-control" placeholder="return media later than min id"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Max ID</label>
-						<input class="form-control" placeholder="return media earlier than max id"></input>
+						<input class="form-control" placeholder="return media earlier than max id"/>
 					</div>
 				</div>
 			</div>
@@ -136,11 +136,11 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Optional Count</label>
-						<input class="form-control" placeholder="count of media to return"></input>
+						<input class="form-control" placeholder="count of media to return"/>
 					</div>
 					<div class="form-group">
 						<label>Optional Max Like ID</label>
-						<input class="form-control" placeholder="return media liked before this id"></input>
+						<input class="form-control" placeholder="return media liked before this id"/>
 					</div>
 				</div>
 			</div>
@@ -186,11 +186,11 @@
 				<div class="col-sm-12">
 					<div class="form-group">
 						<label>Query</label>
-						<input class="form-control" placeholder="Search ..."></input>
+						<input class="form-control" placeholder="Search ..."/>
 					</div>
 					<div class="form-group">
 						<label>Optional Count</label>
-						<input class="form-control" placeholder="number of users to return"></input>
+						<input class="form-control" placeholder="number of users to return"/>
 					</div>
 				</div>
 			</div>
