made a way to code tokens in java and send them to the js controller

--- a/webapp/src/main/resources/static/partials/token.html
+++ b/webapp/src/main/resources/static/partials/token.html
@@ -79,7 +79,7 @@
 		<div class="info-box bg-light-blue">
             <span class="info-box-icon"><img ng-src="{{token.imgUri || 'http://placehold.it/200x200'}}" style="img-align:left;" alt="User Image" /></span>
             <div class="info-box-content">
-              <span class="info-box-text">{{token.username}}</span>
+              <span class="info-box-text">{{token.userName}}</span>
 				<span class="info-box-number">{{token.accessToken}}
 					<button class="btn btn-xs bg-light-blue pull-right" type="button">
 						<i class="fa fa-remove"></i>
